--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,10 +5,13 @@ on:
     tags:
       - 'v*' # This will trigger the workflow on pushing tags starting with 'v'
 
+permissions:
+  contents: write # This is required for creating releases and uploading assets
+
 jobs:
 
   build:
-    name: Build and Test
+    name: Build, Test, and Release
     runs-on: ubuntu-latest
     
     steps:
@@ -17,7 +20,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.21'
+        go-version: '1.20'
 
     - name: Install dependencies
       run: |
@@ -33,38 +36,11 @@ jobs:
     - name: Build for all platforms
       run: make build-all
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          server-monitor-agent-linux-binaries.tar.gz
+          build/*
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-
-    - name: Upload Release Asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./server-monitor-agent-linux-binaries.tar.gz
-        asset_name: server-monitor-agent-linux-binaries.tar.gz
-        asset_content_type: application/gzip
-
-    - name: Upload Individual Binaries
-      run: |
-        for file in build/*; do
-          if [ -f "$file" ]; then
-            filename=$(basename -- "$file")
-            echo "Uploading $filename"
-            curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-                 -H "Content-Type: application/octet-stream" \
-                 --data-binary @"$file" \
-                 "${{ steps.create_release.outputs.upload_url }}?name=$filename"
-          fi
-        done
-
-  # The deployment job is removed as releases are now created automatically
